fix: fix body overflow problem

--- a/styles/header.css
+++ b/styles/header.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  width: 100vw;
+  width: 100%;
 }
 
 li {
